2025Jul24|Sum|Updated sports section with new articles and styles. 2025Jul24|Sum|Added new GTA V page with initial content and styles.

--- a/header.html
+++ b/header.html
@@ -13,6 +13,7 @@
       <nav>
         <ul>
           <li><a href="/games/games.html">Games</a></li>
+          <li><a href="/gta5.html">GTA5</a></li>
           <li><a href="https://latest.ultimatrix.co.in">News</a></li>
           <li><a href="/sports/sports.html">Sports</a></li>
           <li><a href="/blogs/blogs.html">Blogs</a></li>
