--- a/header.html
+++ b/header.html
@@ -14,7 +14,8 @@
         <ul>
           <li><a href="/games/games.html">Games</a></li>
           <li><a href="/gta5.html">GTA5</a></li>
-          <li><a href="https://latest.ultimatrix.co.in">News</a></li>
+          <li><a href="/news/news.html">News</a></li>
+          <!-- <li><a href="https://latest.ultimatrix.co.in">News</a></li> -->
           <li><a href="/sports/sports.html">Sports</a></li>
           <li><a href="/blogs/blogs.html">Blogs</a></li>
           <li><a href="/tools/tools.html">Tools</a></li>
