31Jul25|Sub menu in header

--- a/blogs/amazon/amaz.html
+++ b/blogs/amazon/amaz.html
@@ -21,9 +21,9 @@
       <p>Discover handpicked Amazon favorites, curated for value, joy, and everyday ease.</p>
       <nav class="blogs-main-category-menu">
         <ul>
-          <li><a href="#" class="howto-tab-btn active" data-tab="new">New & Worthy</a></li>
-          <li><a href="#" class="howto-tab-btn" data-tab="eco">Eco-Friendly</a></li>
-          <li><a href="#" class="howto-tab-btn" data-tab="gadgets">Gadgets</a></li>
+          <li><a id = "new" href="#" class="howto-tab-btn active" data-tab="new">New & Worthy</a></li>
+          <li><a id = "eco" href="#" class="howto-tab-btn" data-tab="eco">Eco-Friendly</a></li>
+          <li><a id = "gadgets" href="#" class="howto-tab-btn" data-tab="gadgets">Gadgets</a></li>
         </ul>
       </nav>
     </section>
