--- a/header.html
+++ b/header.html
@@ -11,14 +11,62 @@
     <div class="header-container">
       <h1><a href="/index.html" style="text-decoration:none;color:inherit;">Ultimatrix: The Ultimate World</a></h1>
       <nav>
-        <ul>
-          <li><a href="/games/games.html">Games</a></li>
-          <li><a href="/gta5.html">GTA5</a></li>
-          <li><a href="/news/news.html">News</a></li>
+        <ul class="main-menu">
+          <li><a href="/games/games.html">Games</a>
+            <ul class="dropdown">
+              <li><a href="/games/2048.html">2048</a></li>
+              <li><a href="/games/memory-match.html">Memory Match</a></li>
+              <li><a href="/games/minesweeper.html">Minesweeper</a></li>
+              <li><a href="/games/number-guessing.html">Number Guessing</a></li>
+              <li><a href="/games/rock-paper-scissors.html">Rock Paper Scissors</a></li>
+              <li><a href="/games/snake.html">Snake</a></li>
+              <li><a href="/games/sudoku.html">Sudoku</a></li>
+              <li><a href="/games/typing-speed-test.html">Typing Speed Test</a></li>
+              <li><a href="/games/whack-a-mole.html">Whack-a-Mole</a></li>
+              <li><a href="/games/wheres-waldo.html">Where's Waldo</a></li>
+              <li><a href="/games/xo.html">Tic Tac Toe (XO)</a></li>
+              <!-- <ul class="submenu">
+                  <li><a href="/games/action/fps.html">FPS</a></li>
+                  <li><a href="/games/action/rpg.html">RPG</a></li>
+                </ul> -->
+            </ul>
+          </li>
+          <li><a href="/gta5.html">GTA5</a>
+            <ul class="dropdown">
+              <li><a href="/gta5.html#videos">Videos</a></li>
+              <li><a href="/gta5.html#shorts">Shorts</a></li>
+              <li><a href="/gta5.html#playlists">Playlists</a></li>
+              <li><a href="/gta5.html#tricks">Tricks</a></li>
+            </ul>
+          </li>
+          <li><a href="/news/news.html">News</a>
+            
+          </li>
           <!-- <li><a href="https://latest.ultimatrix.co.in">News</a></li> -->
           <li><a href="/sports/sports.html">Sports</a></li>
-          <li><a href="/blogs/blogs.html">Blogs</a></li>
-          <li><a href="/tools/tools.html">Tools</a></li>
+          <li><a href="/blogs/blogs.html">Blogs</a>
+            <ul class="dropdown">
+              <li><a href="/blogs/amazon/amaz.html">Amazon Picks</a>
+                <!-- <ul class="submenu">
+                  <li><a href="/blogs/amazon/amaz.html#new">New</a></li>
+                  <li><a href="/blogs/amazon/amaz.html#eco">Eco</a></li>
+                  <li><a href="/blogs/amazon/amaz.html#new">New</a></li>
+                </ul> -->
+              </li>
+              <li><a href="/blogs/inspiration/inspiration.html">Inspiration</a></li>
+              <li><a href="/blogs/travel/travel.html">Travelling</a></li>
+              <li><a href="/blogs/howto/howto.html">How-To Guides</a></li>
+              <li><a href="/blogs/fashion/fashion.html">Fashion Trends</a></li>
+            </ul>
+          </li>
+          <li><a href="/tools/tools.html">Tools</a>
+            <!-- <ul class="dropdown">
+              <li><a href="/tools/tools.html#converter">Converter</a></li>
+              <li><a href="/tools/tools.html#calculator">Calculator</a></li>
+              <li><a href="/tools/tools.html#editor">Editor</a></li>
+              <li><a href="/tools/tools.html#optimizer">Optimizer</a></li>
+            </ul> -->
+          </li>
         </ul>
       </nav>
       <!-- <button id="theme-toggle" class="dark-toggle">Toggle Dark Mode</button> -->
