--- a/sports/sports.html
+++ b/sports/sports.html
@@ -22,19 +22,31 @@
         <section class="blogs-main-category">
             <h3>Sports</h3>
             <p>Explore trending thoughts, smart ideas, and original articles you’ll love.</p>
+            <nav class="blogs-main-category-menu">
+                <ul>
+                    <li><a id="new" href="#" class="howto-tab-btn active" data-category="cricket">Cricket</a>
+                    </li>
+                    <li><a id="eco" href="#" class="howto-tab-btn" data-tab="eco" data-category="football">Football</a>
+                    </li>
+                    <li><a id="gadgets" href="#" class="howto-tab-btn" data-tab="gadgets"
+                            data-category="superbowl">Superbowl</a></li>
+                    <li><a id="gadgets" href="#" class="howto-tab-btn" data-tab="gadgets"
+                            data-category="others">Others</a></li>
+                </ul>
+            </nav>
         </section>
         <!-- Category Filters as Buttons -->
-        <section class="blogs-main-category">
-            <!-- <button class="toggle-filters-btn" onclick="toggleFilters()">Show Filters</button> -->
+        <!-- <section class="blogs-main-category">
+            <button class="toggle-filters-btn" onclick="toggleFilters()">Show Filters</button>
             <div class="category-buttons">
                 <button class="category-btn active" data-category="cricket">Cricket</button>
                 <button class="category-btn active" data-category="football">Football</button>
                 <button class="category-btn active" data-category="superbowl">Superbowl</button>
                 <button class="category-btn active" data-category="others">Others</button>
             </div>
-        </section>
+        </section> -->
         <!-- Search Section -->
-        <section class="sports-section-search">
+        <section class="section-search">
             <div>
                 <p class="search-bar-text">Searching for something?</p>
             </div>
