--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -31,7 +31,15 @@
         </ul>
       </nav>
     </section>
-
+<!-- Search Section -->
+        <section class="section-search">
+            <div>
+                <p class="search-bar-text">Searching for something?</p>
+            </div>
+            <div>
+                <input class="search-bar" type="text" id="searchBar" placeholder="Search blogs..." />
+            </div>
+        </section>
 
     <!-- Blog of the Month -->
     <section class="blogs-section"
