--- a/gta5.html
+++ b/gta5.html
@@ -33,11 +33,17 @@
                 </ul>
             </nav>
         </section>
-        <!-- <section class="hero">
-      <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" />
-    </section> -->
+        <!-- Search Section -->
+        <section class="section-search">
+            <div>
+                <p class="search-bar-text">Searching for something?</p>
+            </div>
+            <div>
+                <input class="search-bar" type="text" id="searchBar" placeholder="Search..." />
+            </div>
+        </section>
 
-        <!-- Tools -->
+        <!-- GTA5 -->
         <section>
             <div id="howto-tabs">
                 <div id="tab-videos" class="howto-tab-content" style="display:none;">
@@ -45,7 +51,11 @@
                     <div class="flex-wrap-start">
                         <div class="gta5-card color1">
                             <a href=#>
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/LgYCTfDSTFs?si=N7I82TL97zSzvTW6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/LgYCTfDSTFs?si=N7I82TL97zSzvTW6"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!--<video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>(Story Part 33) GTA 5: Did Somebody Say Yoga? – Michael Loses His Mind at Yoga
                                     Class!</h4>
@@ -57,7 +67,11 @@
                         </div>
                         <div class="gta5-card color2">
                             <a href="#">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/toNGS890l8I?si=ujJDaobe6DxRqkex" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/toNGS890l8I?si=ujJDaobe6DxRqkex"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>(Story Part 32) GTA 5: Three's Company – Michael First Heist with Trevor and
                                     Franklin 🔥💣</h4>
@@ -68,7 +82,11 @@
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/ESavyQ9VEyg?si=tWs1XkjSd9Yq8Ea5" title="YouTube video player" frameborder="10" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="560" height="315"
+                                    src="https://www.youtube.com/embed/ESavyQ9VEyg?si=tWs1XkjSd9Yq8Ea5"
+                                    title="YouTube video player" frameborder="10"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>(Story Part 30) GTA 5: Fame or Shame – Trevor Reunites with Michael & Chases Lazlow!
                                     🎤🚛</h4>
@@ -95,11 +113,16 @@
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
-                                <iframe width="315" height="560" src="https://www.youtube.com/embed/6HGPbM8WtwU" title="YouTube video player" frameborder="10" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="315" height="560" src="https://www.youtube.com/embed/6HGPbM8WtwU"
+                                    title="YouTube video player" frameborder="10"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
-                                <h4>Secret Tunnel in GTA 5 You Never Noticed! 🔥 (5 star to 0 in few secs!) #gta #secret</h4>
+                                <h4>Secret Tunnel in GTA 5 You Never Noticed! 🔥 (5 star to 0 in few secs!) #gta #secret
+                                </h4>
                                 <p>Discover a secret underground tunnel in GTA 5 you probably never knew existed! 🚗💨
-                                    We show the exact map locations, escape the cops, and explore multiple exits — including the drain system!
+                                    We show the exact map locations, escape the cops, and explore multiple exits —
+                                    including the drain system!
                                     Perfect for your next heist or police chase.
                                     👇 Watch till the end to see all the exits!
 
@@ -115,18 +138,25 @@
                         </div>
                         <div class="gta5-card color4">
                             <a href="#">
-                                <iframe width="315" height="560" src="https://www.youtube.com/embed/7XcPSv6xzO4" title="YouTube video player" frameborder="10" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe width="315" height="560" src="https://www.youtube.com/embed/7XcPSv6xzO4"
+                                    title="YouTube video player" frameborder="10"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
-                                <h4>GTA 5 Story Begins! 🔥 Meet Michael & Trevor | Epic GTA 5 Intro #shorts #gta5 #policechase</h4>
-                                <p>🔥 The GTA 5 story begins here! Meet Michael, Trevor, and Franklin as Los Santos explodes into action.  
-                                    This cinematic trailer sets the stage for our full GTA 5 story series. Don’t miss Part 1 — linked in comments & channel!
+                                <h4>GTA 5 Story Begins! 🔥 Meet Michael & Trevor | Epic GTA 5 Intro #shorts #gta5
+                                    #policechase</h4>
+                                <p>🔥 The GTA 5 story begins here! Meet Michael, Trevor, and Franklin as Los Santos
+                                    explodes into action.
+                                    This cinematic trailer sets the stage for our full GTA 5 story series. Don’t miss
+                                    Part 1 — linked in comments & channel!
 
                                     🎮 Full GTA V mission walkthroughs, drama, chaos & epic moments — uploaded weekly.
 
                                     🎥 Subscribe for more: @gta5_chronicles
                                     YO!! Checkout Full Video in Story Playlist
 
-                                    #gta5 #shorts #gtav #gta5story #gta5missions #rockstargames #gta5gameplay #gta5edit #gamingvideos #gta5trailer</p>
+                                    #gta5 #shorts #gtav #gta5story #gta5missions #rockstargames #gta5gameplay #gta5edit
+                                    #gamingvideos #gta5trailer</p>
                             </a>
                         </div>
                     </div>
@@ -138,7 +168,10 @@
                             <a href=#>
                                 <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
                                 <h4>GTA 5 Full Story Mode Walkthrough </h4>
-                                <p>Welcome to my GTA 5 Full Story Mode Walkthrough on Xbox Series X! This complete playthrough covers every main mission, epic heist, intense police chase, and hilarious fail as I experience the full Grand Theft Auto V story from start to finish.
+                                <p>Welcome to my GTA 5 Full Story Mode Walkthrough on Xbox Series X! This complete
+                                    playthrough covers every main mission, epic heist, intense police chase, and
+                                    hilarious fail as I experience the full Grand Theft Auto V story from start to
+                                    finish.
 
                                     ✅ What you’ll see in this series:
 
@@ -154,23 +187,39 @@
                                     GTA 5 Xbox Series X full playthrough
                                     GTA 5 funny moments & fails
                                     ...then you're in the right place!
-                                    🎮 New episodes uploaded regularly — Subscribe and follow along as we conquer Los Santos one mission at a time.
+                                    🎮 New episodes uploaded regularly — Subscribe and follow along as we conquer Los
+                                    Santos one mission at a time.
 
-                                    #GTA5 #GTAVWalkthrough #GTA5StoryMode #GTA5AllMissions #GTAVGameplay #GTA5XboxSeriesX</p>
+                                    #GTA5 #GTAVWalkthrough #GTA5StoryMode #GTA5AllMissions #GTAVGameplay
+                                    #GTA5XboxSeriesX</p>
                             </a>
                         </div>
                         <div class="gta5-card color2">
                             <a href="#">
                                 <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
                                 <h4>GTA 5 Secrets, Stunts & Chaos 🔥 | Shorts Collection</h4>
-                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list. Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every time.💥 Subscribe and never miss the madness!</p>
+                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
+                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
+                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret
+                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list.
+                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane
+                                    steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden
+                                    pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every
+                                    time.💥 Subscribe and never miss the madness!</p>
                             </a>
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
                                 <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
                                 <h4>GTA 5 Plays</h4>
-                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list. Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every time.💥 Subscribe and never miss the madness!</p>
+                                <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
+                                    hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
+                                    all the mad moments you can't miss.🎯 Whether you're looking for new tricks, secret
+                                    locations, or just some pure chaos, this is the ultimate GTA 5 Shorts binge list.
+                                    Updated regularly — stay tuned!🔎 Includes:Secret locations & map easter eggsPlane
+                                    steals & skydiving failsCrazy car chases & jumpsGlitches, tricks, and hidden
+                                    pathsFunny & chaotic GTA moments👀 Watch, laugh, and learn something new every
+                                    time.💥 Subscribe and never miss the madness!</p>
                             </a>
                         </div>
                     </div>
