--- a/tools/tools.html
+++ b/tools/tools.html
@@ -32,6 +32,15 @@
         </ul>
       </nav>
     </section>
+    <!-- Search Section -->
+    <section class="section-search">
+      <div>
+        <p class="search-bar-text">Searching for something?</p>
+      </div>
+      <div>
+        <input class="search-bar" type="text" id="searchBar" placeholder="Search tools..." />
+      </div>
+    </section>
     <!-- <section class="hero">
       <img class="hero-img" src="/assets/img/your-image.jpg" alt="Passion fruit and floral drink on a surface" />
     </section> -->
