--- a/games/games.html
+++ b/games/games.html
@@ -85,7 +85,7 @@
       </div>
       <div class="games-section-menu">
         <div id="2048">
-          <img class="games-section-img" src="" alt="">
+          <img class="games-section-img" src="\assets\img\games\2048.jpg" alt="">
           <div class="games-card color1">
             <a href="/games/2048.html" class="games-section-heading">2048</a>
             <p class="games-card-desc">Slide tiles and combine numbers to reach the elusive 2048.</p>
