--- a/gta5.html
+++ b/gta5.html
@@ -102,7 +102,12 @@
                     <div class="flex-wrap-start">
                         <div class="gta5-card color2">
                             <a href=#>
-                                <video class="gta5-video" controls src="assets/img/roadrage.mp4"></video>
+                                <iframe width="315" height="560" src="https://www.youtube.com/embed/7cDW8PtQVjY"
+                                    title="YouTube video player" frameborder="10"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                
+                               <!-- <video class="gta5-video" controls src="assets/img/roadrage.mp4"></video>-->
                                 <h4>(Story Part 33) GTA 5: Did Somebody Say Yoga? – Michael Loses His Mind at Yoga
                                     Class!</h4>
                                 <p>Michael’s life just keeps spiraling… In this hilarious GTA 5 mission, Michael
@@ -166,7 +171,8 @@
                     <div class="flex-wrap-start">
                         <div class="gta5-card color1">
                             <a href=#>
-                                <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=5MNxgwjKrjjCwie4&amp;list=PLZyNXY-gE66TfkwYQl_tbccXUJbfhA75k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Full Story Mode Walkthrough </h4>
                                 <p>Welcome to my GTA 5 Full Story Mode Walkthrough on Xbox Series X! This complete
                                     playthrough covers every main mission, epic heist, intense police chase, and
@@ -196,7 +202,8 @@
                         </div>
                         <div class="gta5-card color2">
                             <a href="#">
-                                <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=9h2U0pVgEtPeKkSt&amp;list=PLZyNXY-gE66QGkk3X86eQeveO5RAGlZ0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Secrets, Stunts & Chaos 🔥 | Shorts Collection</h4>
                                 <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
                                     hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
@@ -210,7 +217,8 @@
                         </div>
                         <div class="gta5-card color3">
                             <a href="#">
-                                <video class="gta5-video" controls src="videos/startup-insights.mp4"></video>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?si=WNH7yLOMRM2zjur1&amp;list=PLZyNXY-gE66SYsF-UNpvzVw8tes3_W-2K" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <!-- <video class="gta5-video" controls src="videos/startup-insights.mp4"></video> -->
                                 <h4>GTA 5 Plays</h4>
                                 <p>Buckle up for the wildest ride through Los Santos! 🚗💨This playlist features GTA 5's
                                     hidden spots, secret tunnels, crazy stunts, epic police chases, plane steals, and
