01Aug25|News, Sports, tools refactoring|created js files

--- a/about-us.html
+++ b/about-us.html
@@ -7,15 +7,11 @@
   <title>About Us | Ultimatrix</title>
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
+  <script src="/js/script.js"></script>
 </head>
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
   <main>
     <section class="blogs-main-category">
       <h3>About Ultimatrix</h3>
@@ -54,11 +50,6 @@
     </section>
   </main>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
 </body>
 
 </html>
