--- a/sports/sports2.html
+++ b/sports/sports2.html
@@ -7,17 +7,13 @@
     <title>Blogs | Ultimatix</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/blogs.css" />
-    <link rel="stylesheet" href="/css/sports.css" />
+    <link rel="stylesheet" href="/css/news-sports.css" />
+    <link rel="stylesheet" href="/css/news-sports-pages.css" />
     <script src="/js/script.js" defer></script>
 </head>
 
 <body>
     <div id="header"></div>
-    <script>
-        fetch('/header.html')
-            .then(res => res.text())
-            .then(data => document.getElementById('header').innerHTML = data);
-    </script>
     <!-- <header>
     <h1>Tech Startup Boom in 2025</h1>
     <p class="short-desc">India’s tech ecosystem experiences unprecedented growth this year.</p>
@@ -74,46 +70,6 @@ While several municipalities have launched green initiatives—including urban g
     </main>
 
     <div id="footer"></div>
-    <script>
-        fetch('/footer.html')
-            .then(res => res.text())
-            .then(data => document.getElementById('footer').innerHTML = data);
-    </script>
 </body>
-<style>
-    body {
-        font-family: 'Segoe UI', sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: #fff;
-        color: #333;
-    }
-
-    header,
-    .synopsis,
-    .full-story,
-    .article-footer {
-        padding: 1rem 2rem;
-    }
-
-    header h1 {
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
-    }
-
-    .media img,
-    .media video {
-        width: 100%;
-        max-height: 500px;
-        object-fit: cover;
-    }
-
-    .article-footer {
-        background-color: #f5f5f5;
-        font-size: 0.85rem;
-        border-top: 1px solid #ccc;
-    }
-</style>
 
 </html>
