--- a/tools/tools.html
+++ b/tools/tools.html
@@ -8,16 +8,12 @@
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/games.css" />
   <link rel="stylesheet" href="/css/blogs.css" />
-  <script src="/js/script.js"></script>
+  <script src="/js/script.js" defer></script>
+  <script src="/js/tools.js" defer></script>
 </head>
 
 <body>
   <div id="header"></div>
-  <script>
-    fetch('/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-  </script>
   <main>
     <section class="blogs-main-category">
       <h3>Tools</h3>
@@ -150,26 +146,6 @@
 
   </main>
   <div id="footer"></div>
-  <script>
-    fetch('/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
 </body>
-<script>
-  // Tab switching logic for How To section
-  document.querySelectorAll('.howto-tab-btn').forEach(function (btn) {
-    btn.addEventListener('click', function (e) {
-      e.preventDefault();
-      document.querySelectorAll('.howto-tab-btn').forEach(function (b) { b.classList.remove('active'); });
-      btn.classList.add('active');
-      var tab = btn.getAttribute('data-tab');
-      document.querySelectorAll('.howto-tab-content').forEach(function (tc) {
-        tc.style.display = 'none';
-      });
-      document.getElementById('tab-' + tab).style.display = 'block';
-    });
-  });
-</script>
 
 </html>
